redact-pdf/extract-text/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extract-text-ingress
  namespace: anonymus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: nginx.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /extract-text
        pathType: Prefix
        backend:
          service:
            name: extract-text-service
            port:
              number: 80
